--- a/Application/BackgroundAdmin/View/User/addAdmin.html
+++ b/Application/BackgroundAdmin/View/User/addAdmin.html
@@ -37,10 +37,10 @@
 			    	<div class="col-sm-10">
 			      		<!-- <input type="text" id="auth" class="form-control"> -->
 			      		<select style="width:60%;float:left;height:30px;border:none;background-color: #fff;border:1px #eee solid" name="" id="auth">
-			      			<option value="4">部长</option>
-			      			<option value="3">副部长</option>
-			      			<option value="2">干事</option>
-			      			<option value="1">老干事</option>
+			      			<option value="4">部长级权限</option>
+			      			<option value="3">副部长级权限</option>
+			      			<option value="2">干事级权限</option>
+			      			<option value="1">老干事级权限</option>
 			      		</select>
 			    	</div>
 			 	</div>
